[package]
name = "website"
authors = ["Javier E. <jaedns@gmail.com>"]
description = "My personal website"
version = "0.0.0-alpha.1"
license = "MIT"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[build-dependencies]
leptos = { version = "0.6.9", default-features = false }
leptos-bulma = "0.0.0-alpha.6"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[dependencies]
anyhow = "1.0.81"
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
http = "1.1.0"
leptos = "0.6.9"
leptos-bulma = "0.0.0-alpha.6"
leptos_integration_utils = { version = "0.6.9", optional = true }
leptos_meta = "0.6.9"
leptos_router = "0.6.9"
leptos-spin = { version = "0.1.0", optional = true }
leptos-use = "0.10.5"
serde = "1.0.197"
spin-sdk = { version = "2.2.0", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
web-sys = "0.3.69"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:wasm-bindgen",
]
ssr = [
    "leptos/ssr",
    "leptos-bulma/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/spin",
    "leptos-use/ssr",
    "dep:spin-sdk",
    "dep:leptos-spin",
    "dep:leptos_integration_utils",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


[package.metadata.leptos]
outout-name = "website"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"

# Mandatory fields for Spin apps
bin-target-triple = "wasm32-wasi"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
