[workspace]
members = [".", "website_admin", "website_core"]
resolver = "2"

[workspace.package]
description = "My personal website"
authors = ["Javier E. <jaedns@gmail.com>"]
homepage = "https://javier.fermyon.app"
repository = "https://github.com/javierEd/website.git"
license = "MIT"
version = "0.0.0-alpha.1"
edition = "2021"
publish = false

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
http = "1.1.0"
leptos = "0.6.11"
leptos-bulma = "0.0.0-alpha.12"
leptos_integration_utils = "0.6.11"
leptos_meta = "0.6.11"
leptos_router = "0.6.11"
leptos-spin = "0.1.0"
serde = "1.0.198"
spin-sdk = "2.2.0"
time = { version = "0.3.36", features = ["serde-human-readable"] }
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
website_core = { path = "website_core" }

[package]
name = "website"
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
leptos = { workspace = true }
leptos-bulma = { workspace = true }

[dependencies]
console_error_panic_hook = { workspace = true }
http = { workspace = true }
leptos = { workspace = true }
leptos-bulma = { workspace = true }
leptos_i18n = { version = "0.3.3", default-features = false, features = [
    "cookie",
    "yaml_files",
] }
leptos_integration_utils = { workspace = true, optional = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos-spin = { workspace = true, optional = true }
leptos-use = "0.10.7"
serde = { workspace = true }
pulldown-cmark = "0.10.2"
spin-sdk = { workspace = true, optional = true }
time = { workspace = true, features = ["serde-human-readable", "wasm-bindgen"] }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true }
website_core = { workspace = true }

[features]
csr = ["leptos/csr", "leptos_i18n/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
    "leptos/hydrate",
    "leptos_i18n/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:wasm-bindgen",
]
ssr = [
    "leptos/ssr",
    "leptos-bulma/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/spin",
    "leptos-use/ssr",
    "website_core/ssr",
    "dep:spin-sdk",
    "dep:leptos-spin",
    "dep:leptos_integration_utils",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "website"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"

# Mandatory fields for Spin apps
bin-target-triple = "wasm32-wasi"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "es"]
