[package]
name = "website_admin"
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { workspace = true }
cookie = { version = "0.18.1", optional = true }
http = { workspace = true }
leptos = { workspace = true }
leptos-bulma = { workspace = true }
leptos_integration_utils = { workspace = true, optional = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos-spin = { workspace = true, optional = true }
rand = { version = "0.8.5", optional = true }
serde = { workspace = true, features = ["derive"] }
spin-sdk = { workspace = true, optional = true }
slug = "0.1.5"
time = { workspace = true, features = ["serde-human-readable", "wasm-bindgen"] }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true }
website_core = { workspace = true }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:wasm-bindgen",
]
ssr = [
    "leptos/ssr",
    "leptos-bulma/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/spin",
    "website_core/ssr",
    "dep:cookie",
    "dep:leptos_integration_utils",
    "dep:leptos-spin",
    "dep:rand",
    "dep:spin-sdk",
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "website_admin"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site-admin"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "../assets"

# Mandatory fields for Spin apps
bin-target-triple = "wasm32-wasi"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
